fixed color and alignment of chess pieces

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,25 @@
-/* #gameboard {
-    width: 320px;
-    height: 320px;
+#gameboard {
+    width: 400px;
+    height: 400px;
     display: flex;
     flex-wrap: wrap;
 }
 
+.piece {
+    margin-left: auto;
+    margin-right: auto;
+    
+  }
+
 .square {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
 }
 
 .square svg {
     height: 30px;
     width: 30px;
-    margin: 5px;
+    margin: 15px;
 }
 
 .beige {
@@ -30,45 +36,7 @@
 
 .white {
     fill: white;
-} */
+}
 
-#gameboard {
-    width: 320px;
-    height: 320px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .square {
-    height: 40px;
-    width: 40px;
-  }
-  
-  .square .piece {
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-  }
-  
-  .square .piece svg {
-    height: 30px;
-    width: 30px;
-    margin: 5px;
-  }
-  
-  .beige {
-    background-color: rgb(110, 110, 98);
-  }
-  
-  .brown {
-    background-color: brown;
-  }
-  
-  .black {
-    fill: black;
-  }
-  
-  .white {
-    fill: white;
-  }
+
   
